# tqvs

./: README.md  perf_report.txt  pyproject.toml
.github/workflows/: publish.yml  test.yml
tests/: conftest.py  test_builder.py  test_hdf5_backend.py  test_lance_backend.py  test_lmdb_backend.py  test_locking.py  test_npy_backend.py  test_parquet_backend.py  test_perf.py  test_quantize.py  test_query.py  test_store.py
tqvs/: __init__.py  _locking.py  _types.py  builder.py  metrics.py  quantize.py  query.py  store.py
tqvs/backends/: __init__.py  base.py  hdf5.py  lance.py  lmdb.py  npy.py  parquet.py
