[project]
name = "tqvs"
version = "0.1.0"
description = "Composable vector store with pluggable persistence, dtype quantisation, and similarity search"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.4.4",
    "filelock>=3.16",
]

[project.optional-dependencies]
torch = [
    "torch>=2.11.0",
]
lmdb = [
    "lmdb>=1.4",
]
hdf5 = [
    "h5py>=3.10",
]
lance = [
    "pylance>=0.20",
]
parquet = [
    "pyarrow>=15",
]
all = [
    "lmdb>=1.4",
    "h5py>=3.10",
    "pylance>=0.20",
    "pyarrow>=15",
]
test = [
    "pytest>=8",
    "pytest-cov>=6",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.pytest.ini_options]
addopts = "--cov=tqvs --cov-report=term-missing"

[tool.coverage.run]
source = ["tqvs"]

[tool.coverage.report]
show_missing = true
skip_empty = true